Bug 488962 - Changing display settings resets display field to 0
Summary: Changing display settings resets display field to 0
Status: RESOLVED FIXED
Alias: None
Product: kcalc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gabriel Barrantes
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-22 10:26 UTC by popov895
Modified: 2024-07-16 23:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-06-22 10:26:58 UTC
SUMMARY

Changing display font resets display field to 0.

STEPS TO REPRODUCE

1. Do some calculation
2. Open Settings > Font
3. Change "Display font"

OBSERVED RESULT

The display field resets to 0.

EXPECTED RESULT

The display field keeps its value unchanged.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240609
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.3.0
KDE Gear Version: 24.05.1
Qt Version: 6.7.1
Comment 1 Gabriel Barrantes 2024-06-22 16:19:29 UTC
Confirmed, but I think the Font settings page might get removed per discussion on https://invent.kde.org/utilities/kcalc/-/merge_requests/98
Comment 2 Bug Janitor Service 2024-07-09 20:31:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kcalc/-/merge_requests/118
Comment 3 Gabriel Barrantes 2024-07-16 23:18:05 UTC
Git commit 20bbcfb2e33f13104b9bae2520fc0f5e135556a3 by Gabriel Barrantes.
Committed on 16/07/2024 at 23:08.
Pushed by gabrielbarrantes into branch 'master'.

Fix display reset when changing settings

M  +6    -68   kcalc_display.cpp

https://invent.kde.org/utilities/kcalc/-/commit/20bbcfb2e33f13104b9bae2520fc0f5e135556a3