Fix display reset when changing settings

BUG: 488962